--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 data/
-/models/
+models/
+src/utils/__pycache__/
+src/models/__pycache__/
+drafts/ghandoura/__pycache__/
+drafts/elbaroudy/__pycache__/
+drafts/schwarz/__pycache__/
