Adding directories to be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ src/models/__pycache__/
 drafts/ghandoura/__pycache__/
 drafts/elbaroudy/__pycache__/
 drafts/schwarz/__pycache__/
+drafts/ghandoura/.ipynb_checkpoints/
